--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.34.2"
 orjson = "^3.10.18"
 asyncpg = "^0.30.0"
 greenlet = "^3.2.2"
+prometheus-fastapi-instrumentator = "^7.1.0"
 
 
 [build-system]
