--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ orjson = "^3.10.18"
 asyncpg = "^0.30.0"
 greenlet = "^3.2.2"
 prometheus-fastapi-instrumentator = "^7.1.0"
+sentry-sdk = {extras = ["fastapi"], version = "^2.28.0"}
 
 
 [build-system]
