--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ asyncpg = "^0.30.0"
 greenlet = "^3.2.2"
 prometheus-fastapi-instrumentator = "^7.1.0"
 sentry-sdk = {extras = ["fastapi"], version = "^2.28.0"}
+fastapi-filter = "^2.0.1"
+pydantic-i18n = "^0.4.5"
+python-benedict = "^0.34.1"
 
 
 [build-system]
