--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ sentry-sdk = {extras = ["fastapi"], version = "^2.28.0"}
 fastapi-filter = "^2.0.1"
 pydantic-i18n = "^0.4.5"
 python-benedict = "^0.34.1"
+faststream = {extras = ["redis"], version = "^0.5.41"}
 
 
 [build-system]
